--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <header>
         <nav>
-            <a href="">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
-              <li><a href="/Studio">Studio</a></li>
-              <li><a href="/Portfolio">Portfolio</a></li>
-              <li><a href="/Contacts">Contacts</a></li>
+              <li><a href="">Studio</a></li>
+              <li><a href="">Portfolio</a></li>
+              <li><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
@@ -27,10 +27,10 @@
     </header>
 
     <main>
-        <div>
+        <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
-        </div>
+        </section>
         <section>
             <div>
                 <h2>Strategy</h2>
@@ -108,7 +108,7 @@
     </main>
 
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
