--- a/index.html
+++ b/index.html
@@ -32,23 +32,26 @@
             <button type="button">Order Service</button>
         </section>
         <section>
-            <div>
-                <h2>Strategy</h2>
-                <p>Our goal is to identify the business
-                    problem to walk away with the perfect and creative solution. </p>
-            </div>
-            <div>
-                <h2>Punctuality</h2>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </div>
-            <div>
-                <h2>Diligence</h2>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </div>
-            <div>
-                <h2>Technologies</h2>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </div>
+            <h2></h2>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
         </section>
         <section>
             <h2>What are we doing</h2>
@@ -65,43 +68,27 @@
             </ul>
         </section>
         <section>
-            <h2>Our team</h2>
+            <h2>Our Team</h2>
             <ul>
                 <li>
-                    <figure>
-                        <img src="./images/employers/employer-1.jpg" alt="employer smiles" width="264" height="260">
-                        <figcaption>
-                            <h3>Mark Guerrero</h3>
-                            <p>Product Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/employers/employer-1.jpg" alt="employer smiles" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>    
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/employers/employer-2.jpg" alt="employer smiles" width="264" height="260">
-                        <figcaption>
-                            <h3>Tom Ford</h3>
-                            <p>Frontend Developer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/employers/employer-2.jpg" alt="employer smiles" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/employers/employer-3.jpg" alt="employer smiles" width="264" height="260">
-                        <figcaption>
-                            <h3>Camila Garcia</h3>
-                            <p>Marketing</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/employers/employer-3.jpg" alt="employer smiles" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/employers/employer-4.jpg" alt="employer smiles" width="264" height="260">
-                        <figcaption>
-                            <h3>Daniel Wilson</h3>
-                            <p>UI Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/employers/employer-4.jpg" alt="employer smiles" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>    
                 </li>
             </ul>
         </section>
